<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/backgroundBlue">
    <View
        android:id="@+id/divide"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_centerInParent="true"/>
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@+id/divide">
        <include layout="@layout/layout_common_titlebar"/>
        <TextView
            android:id="@+id/about_tv_version"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/version"
            android:textColor="@android:color/white"
            android:textSize="16dp"
            android:layout_centerHorizontal="true"
            android:layout_alignParentBottom="true"
            android:layout_marginBottom="28dp"
            android:layout_marginTop="8dp"/>
        <TextView
            android:id="@+id/about_tv_hnti"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/app_title"
            android:textColor="@android:color/white"
            android:textSize="24dp"
            android:layout_centerHorizontal="true"
            android:layout_above="@+id/about_tv_version"/>
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:src="@mipmap/hnti_icon"
            android:layout_above="@+id/about_tv_hnti"
            android:layout_margin="12dp"/>
    </RelativeLayout>
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/divide">
        <ImageView
            android:id="@+id/qrcode_iv"
            android:layout_width="140dp"
            android:layout_height="140dp"
            android:src="@mipmap/androidqrcode"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="6dp"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="此二维码用于分享推广，扫描二维码即可下载APP"
            android:textColor="@android:color/white"
            android:textSize="10dp"
            android:layout_centerHorizontal="true"
            android:layout_below="@+id/qrcode_iv"/>
        <TextView
            android:id="@+id/about_tv_remarks"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_alignParentBottom="true"
            android:text="@string/remarks"
            android:textColor="@android:color/white"
            android:textSize="12dp"
            android:layout_marginBottom="16dp"/>
        <TextView
            android:id="@+id/about_tv_copyright"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/copyright"
            android:textColor="@android:color/white"
            android:textSize="13dp"
            android:layout_marginBottom="4dp"
            android:layout_centerHorizontal="true"
            android:layout_above="@+id/about_tv_remarks"/>

    </RelativeLayout>

</RelativeLayout>