<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@mipmap/login_background">

    <LinearLayout
        android:id="@+id/login_panel_userinfo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_centerInParent="true"
        android:layout_marginBottom="30dp"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp">
        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <EditText
                android:id="@+id/login_et_username"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:hint="@string/username"
                android:textCursorDrawable="@null"
                android:textColorHint="@color/textGrey"
                android:textColor="@color/textGrey"
                android:drawableLeft="@mipmap/username"
                android:drawablePadding="10dp"
                android:background="@null"
                android:lines="1"
                android:maxLength="16"/>
            <ImageView
                android:visibility="invisible"
                android:layout_marginRight="12dp"
                android:padding="5dp"
                android:src="@mipmap/search_clear_normal"
                android:id="@+id/activity_login_iv_delete_username"
                android:layout_gravity="right|center_vertical"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:clickable="true"/>
        </FrameLayout>
        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/underLineGrey"/>
        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <EditText
                android:id="@+id/login_et_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:hint="@string/password"
                android:textCursorDrawable="@null"
                android:textColorHint="@color/textGrey"
                android:textColor="@color/textGrey"
                android:drawableLeft="@mipmap/password"
                android:drawablePadding="10dp"
                android:background="@null"
                android:inputType="textPassword"
                android:lines="1"
                android:maxLength="16"/>
            <ImageView
                android:visibility="invisible"
                android:layout_marginRight="12dp"
                android:padding="5dp"
                android:src="@mipmap/search_clear_normal"
                android:id="@+id/activity_login_iv_delete_password"
                android:layout_gravity="right|center_vertical"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:clickable="true"/>
        </FrameLayout>
        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/underLineGrey"/>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">
            <CheckBox
                android:id="@+id/login_cb_remeber_password"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                android:layout_marginLeft="2dp"
                android:text="记住密码"
                android:textColor="@android:color/white"
                android:checked="false" />
            <CheckBox
                android:id="@+id/login_cb_automatic"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                android:layout_marginLeft="12dp"
                android:text="自动登录"
                android:textColor="@android:color/white"
                android:checked="false" />
        </LinearLayout>

    </LinearLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@+id/login_panel_userinfo">
        <View
            android:id="@+id/login_view_divide"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@android:color/transparent"
            android:layout_centerInParent="true"/>
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@mipmap/hnti_icon"
            android:layout_above="@+id/login_view_divide"
            android:layout_centerHorizontal="true"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/app_title"
            android:layout_below="@+id/login_view_divide"
            android:layout_centerHorizontal="true"
            android:textColor="@android:color/white"
            android:textSize="22dp"
            android:layout_marginTop="16dp"/>
    </RelativeLayout>
    
    <LinearLayout
        android:id="@+id/login_panel_login_btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/login_panel_userinfo">
        <View
            android:layout_width="0dp"
            android:layout_height="1dp"
            android:layout_weight="1"/>
        <Button
            android:id="@+id/login_btn_login"
            android:layout_width="0dp"
            android:layout_height="40dp"
            android:layout_weight="2"
            android:text="@string/login"
            android:textColor="@color/textGrey"
            android:textSize="18dp"
            android:background="@drawable/login_button_background_selector"/>
        <View
            android:layout_width="0dp"
            android:layout_height="1dp"
            android:layout_weight="1"/>
    </LinearLayout>
    
    <TextView
        android:id="@+id/login_tv_forget_password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:clickable="true"
        android:text="@string/forgetPassword"
        android:textColor="@color/login_forget_textcolor_selector"
        android:layout_below="@+id/login_panel_login_btn"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="8dp"
        android:padding="6dp"
        android:textSize="16dp"
        android:visibility="invisible"/>

    <ImageButton
        android:id="@+id/login_ibtn_setting"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@mipmap/setting"
        android:background="@android:color/transparent"
        android:layout_alignParentRight="true"
        android:layout_alignParentBottom="true"
        android:padding="20dp"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/hnti"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:textColor="@android:color/white"
        android:layout_marginBottom="16dp"/>

</RelativeLayout>